cl/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'print'", "'area'", "'perimeter'", 
                     "'vertices'", "'centroid'", "'color'", "','", "'inside'", 
                     "'equal'", "'draw'", "'('", "')'", "'#'", "'!'", "'['", 
                     "']'", "'{'", "'}'", "'*'", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTERSECT", "UNION", "ID", "FLOAT", "OUTPUT", "COMMENT", 
                      "WS", "WORD", "STRING" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_assignment = 2
    RULE_command = 3
    RULE_printCommand = 4
    RULE_areaCommand = 5
    RULE_perimeterCommand = 6
    RULE_verticesCommand = 7
    RULE_centroidCommand = 8
    RULE_colorCommand = 9
    RULE_insideCommand = 10
    RULE_equalCommand = 11
    RULE_drawCommand = 12
    RULE_operation = 13
    RULE_parenthesisOP = 14
    RULE_boundingBoxOp = 15
    RULE_nCreateOp = 16
    RULE_variable = 17
    RULE_listpoints = 18
    RULE_point = 19
    RULE_real = 20
    RULE_rgbColor = 21
    RULE_listOperations = 22
    RULE_output = 23
    RULE_string = 24

    ruleNames =  [ "root", "expr", "assignment", "command", "printCommand", 
                   "areaCommand", "perimeterCommand", "verticesCommand", 
                   "centroidCommand", "colorCommand", "insideCommand", "equalCommand", 
                   "drawCommand", "operation", "parenthesisOP", "boundingBoxOp", 
                   "nCreateOp", "variable", "listpoints", "point", "real", 
                   "rgbColor", "listOperations", "output", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    INTERSECT=20
    UNION=21
    ID=22
    FLOAT=23
    OUTPUT=24
    COMMENT=25
    WS=26
    WORD=27
    STRING=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.T__1) | (1 << ExprParser.T__2) | (1 << ExprParser.T__3) | (1 << ExprParser.T__4) | (1 << ExprParser.T__5) | (1 << ExprParser.T__6) | (1 << ExprParser.T__8) | (1 << ExprParser.T__9) | (1 << ExprParser.T__10) | (1 << ExprParser.T__11) | (1 << ExprParser.T__13) | (1 << ExprParser.T__14) | (1 << ExprParser.T__15) | (1 << ExprParser.ID))) != 0):
                self.state = 50
                self.expr()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def command(self):
            return self.getTypedRuleContext(ExprParser.CommandContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.operation(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ExprParser.ID)
            self.state = 64
            self.match(ExprParser.T__0)
            self.state = 65
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printCommand(self):
            return self.getTypedRuleContext(ExprParser.PrintCommandContext,0)


        def areaCommand(self):
            return self.getTypedRuleContext(ExprParser.AreaCommandContext,0)


        def perimeterCommand(self):
            return self.getTypedRuleContext(ExprParser.PerimeterCommandContext,0)


        def verticesCommand(self):
            return self.getTypedRuleContext(ExprParser.VerticesCommandContext,0)


        def centroidCommand(self):
            return self.getTypedRuleContext(ExprParser.CentroidCommandContext,0)


        def colorCommand(self):
            return self.getTypedRuleContext(ExprParser.ColorCommandContext,0)


        def insideCommand(self):
            return self.getTypedRuleContext(ExprParser.InsideCommandContext,0)


        def equalCommand(self):
            return self.getTypedRuleContext(ExprParser.EqualCommandContext,0)


        def drawCommand(self):
            return self.getTypedRuleContext(ExprParser.DrawCommandContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = ExprParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_command)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.printCommand()
                pass
            elif token in [ExprParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.areaCommand()
                pass
            elif token in [ExprParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.perimeterCommand()
                pass
            elif token in [ExprParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.verticesCommand()
                pass
            elif token in [ExprParser.T__5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.centroidCommand()
                pass
            elif token in [ExprParser.T__6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.colorCommand()
                pass
            elif token in [ExprParser.T__8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.insideCommand()
                pass
            elif token in [ExprParser.T__9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.equalCommand()
                pass
            elif token in [ExprParser.T__10]:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.drawCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(ExprParser.StringContext,0)


        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_printCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintCommand" ):
                return visitor.visitPrintCommand(self)
            else:
                return visitor.visitChildren(self)




    def printCommand(self):

        localctx = ExprParser.PrintCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ExprParser.T__1)
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.STRING]:
                self.state = 79
                self.string()
                pass
            elif token in [ExprParser.T__11, ExprParser.T__13, ExprParser.T__14, ExprParser.T__15, ExprParser.ID]:
                self.state = 80
                self.operation(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AreaCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_areaCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAreaCommand" ):
                return visitor.visitAreaCommand(self)
            else:
                return visitor.visitChildren(self)




    def areaCommand(self):

        localctx = ExprParser.AreaCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_areaCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(ExprParser.T__2)
            self.state = 84
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PerimeterCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_perimeterCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPerimeterCommand" ):
                return visitor.visitPerimeterCommand(self)
            else:
                return visitor.visitChildren(self)




    def perimeterCommand(self):

        localctx = ExprParser.PerimeterCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_perimeterCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ExprParser.T__3)
            self.state = 87
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VerticesCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_verticesCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerticesCommand" ):
                return visitor.visitVerticesCommand(self)
            else:
                return visitor.visitChildren(self)




    def verticesCommand(self):

        localctx = ExprParser.VerticesCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_verticesCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(ExprParser.T__4)
            self.state = 90
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CentroidCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_centroidCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCentroidCommand" ):
                return visitor.visitCentroidCommand(self)
            else:
                return visitor.visitChildren(self)




    def centroidCommand(self):

        localctx = ExprParser.CentroidCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_centroidCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ExprParser.T__5)
            self.state = 93
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColorCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(ExprParser.VariableContext,0)


        def rgbColor(self):
            return self.getTypedRuleContext(ExprParser.RgbColorContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_colorCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColorCommand" ):
                return visitor.visitColorCommand(self)
            else:
                return visitor.visitChildren(self)




    def colorCommand(self):

        localctx = ExprParser.ColorCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_colorCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ExprParser.T__6)
            self.state = 96
            self.variable()
            self.state = 97
            self.match(ExprParser.T__7)
            self.state = 98
            self.rgbColor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InsideCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.OperationContext)
            else:
                return self.getTypedRuleContext(ExprParser.OperationContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_insideCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsideCommand" ):
                return visitor.visitInsideCommand(self)
            else:
                return visitor.visitChildren(self)




    def insideCommand(self):

        localctx = ExprParser.InsideCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_insideCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ExprParser.T__8)
            self.state = 101
            self.operation(0)
            self.state = 102
            self.match(ExprParser.T__7)
            self.state = 103
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqualCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.OperationContext)
            else:
                return self.getTypedRuleContext(ExprParser.OperationContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_equalCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualCommand" ):
                return visitor.visitEqualCommand(self)
            else:
                return visitor.visitChildren(self)




    def equalCommand(self):

        localctx = ExprParser.EqualCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_equalCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(ExprParser.T__9)
            self.state = 106
            self.operation(0)
            self.state = 107
            self.match(ExprParser.T__7)
            self.state = 108
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DrawCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def output(self):
            return self.getTypedRuleContext(ExprParser.OutputContext,0)


        def listOperations(self):
            return self.getTypedRuleContext(ExprParser.ListOperationsContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_drawCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrawCommand" ):
                return visitor.visitDrawCommand(self)
            else:
                return visitor.visitChildren(self)




    def drawCommand(self):

        localctx = ExprParser.DrawCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_drawCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(ExprParser.T__10)
            self.state = 111
            self.output()
            self.state = 112
            self.match(ExprParser.T__7)
            self.state = 113
            self.listOperations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parenthesisOP(self):
            return self.getTypedRuleContext(ExprParser.ParenthesisOPContext,0)


        def boundingBoxOp(self):
            return self.getTypedRuleContext(ExprParser.BoundingBoxOpContext,0)


        def nCreateOp(self):
            return self.getTypedRuleContext(ExprParser.NCreateOpContext,0)


        def variable(self):
            return self.getTypedRuleContext(ExprParser.VariableContext,0)


        def listpoints(self):
            return self.getTypedRuleContext(ExprParser.ListpointsContext,0)


        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.OperationContext)
            else:
                return self.getTypedRuleContext(ExprParser.OperationContext,i)


        def INTERSECT(self):
            return self.getToken(ExprParser.INTERSECT, 0)

        def UNION(self):
            return self.getToken(ExprParser.UNION, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)



    def operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.OperationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_operation, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.T__11]:
                self.state = 116
                self.parenthesisOP()
                pass
            elif token in [ExprParser.T__13]:
                self.state = 117
                self.boundingBoxOp()
                pass
            elif token in [ExprParser.T__14]:
                self.state = 118
                self.nCreateOp()
                pass
            elif token in [ExprParser.ID]:
                self.state = 119
                self.variable()
                pass
            elif token in [ExprParser.T__15]:
                self.state = 120
                self.listpoints()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.OperationContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                    self.state = 123
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 124
                    _la = self._input.LA(1)
                    if not(_la==ExprParser.INTERSECT or _la==ExprParser.UNION):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 125
                    self.operation(6) 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ParenthesisOPContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_parenthesisOP

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesisOP" ):
                return visitor.visitParenthesisOP(self)
            else:
                return visitor.visitChildren(self)




    def parenthesisOP(self):

        localctx = ExprParser.ParenthesisOPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_parenthesisOP)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ExprParser.T__11)
            self.state = 132
            self.operation(0)
            self.state = 133
            self.match(ExprParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoundingBoxOpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_boundingBoxOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoundingBoxOp" ):
                return visitor.visitBoundingBoxOp(self)
            else:
                return visitor.visitChildren(self)




    def boundingBoxOp(self):

        localctx = ExprParser.BoundingBoxOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_boundingBoxOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ExprParser.T__13)
            self.state = 136
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NCreateOpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def real(self):
            return self.getTypedRuleContext(ExprParser.RealContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_nCreateOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNCreateOp" ):
                return visitor.visitNCreateOp(self)
            else:
                return visitor.visitChildren(self)




    def nCreateOp(self):

        localctx = ExprParser.NCreateOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_nCreateOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(ExprParser.T__14)
            self.state = 139
            self.real()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = ExprParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListpointsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def point(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.PointContext)
            else:
                return self.getTypedRuleContext(ExprParser.PointContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_listpoints

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListpoints" ):
                return visitor.visitListpoints(self)
            else:
                return visitor.visitChildren(self)




    def listpoints(self):

        localctx = ExprParser.ListpointsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_listpoints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(ExprParser.T__15)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExprParser.FLOAT:
                self.state = 144
                self.point()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(ExprParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PointContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def real(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.RealContext)
            else:
                return self.getTypedRuleContext(ExprParser.RealContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_point

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoint" ):
                return visitor.visitPoint(self)
            else:
                return visitor.visitChildren(self)




    def point(self):

        localctx = ExprParser.PointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.real()
            self.state = 153
            self.real()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RealContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(ExprParser.FLOAT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_real

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal" ):
                return visitor.visitReal(self)
            else:
                return visitor.visitChildren(self)




    def real(self):
